--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -84,12 +84,7 @@
       "path_to_root": "_themes.VS.Modern",
       "url": "https://github.com/Microsoft/templates.vs.com.tr-tr",
       "branch": "master",
-      "branch_mapping": {
-        "master": "develop",
-        "vscom_develop_e2e": "develop",
-        "vscom_release_e2e": "release",
-        "vscom_hotfix_e2e": "hotfix"
-      }
+      "branch_mapping": {}
     }
   ]
 }
