--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -1,4 +1,5 @@
 {
+  "build_entry_point": "docs",
   "need_generate_pdf": false,
   "need_generate_intellisense": false,
   "docsets_to_publish": [
@@ -8,14 +9,15 @@
       "build_output_subfolder": "openpublishing/test-docs",
       "locale": "tr-tr",
       "version": 0,
-      "open_to_public_contributors": false,
+      "open_to_public_contributors": true,
       "type_mapping": {
         "Conceptual": "Content",
         "ManagedReference": "Content",
         "RestApi": "Content"
       },
       "build_entry_point": "docs",
-      "template_folder": "_themes"
+      "template_folder": "_themes",
+      "is_dynamic_rendering": false
     },
     {
       "docset_name": "openpublishing-test-op",
@@ -23,13 +25,15 @@
       "build_output_subfolder": "openpublishing/test-op-technet",
       "locale": "tr-tr",
       "version": 0,
-      "open_to_public_contributors": false,
+      "open_to_public_contributors": true,
       "type_mapping": {
         "Conceptual": "Content",
         "ManagedReference": "Content",
         "RestApi": "Content"
       },
-      "build_entry_point": "op"
+      "build_entry_point": "docs",
+      "template_folder": "_themes",
+      "is_dynamic_rendering": false
     },
     {
       "docset_name": "openpublishing-test-op-technet",
@@ -37,13 +41,15 @@
       "build_output_subfolder": "openpublishing/test-op",
       "locale": "tr-tr",
       "version": 0,
-      "open_to_public_contributors": false,
+      "open_to_public_contributors": true,
       "type_mapping": {
         "Conceptual": "Content",
         "ManagedReference": "Content",
         "RestApi": "Content"
       },
-      "build_entry_point": "op"
+      "build_entry_point": "docs",
+      "template_folder": "_themes",
+      "is_dynamic_rendering": false
     },
     {
       "docset_name": "openpublishing-test-static-vscom",
@@ -58,7 +64,8 @@
         "RestApi": "Content"
       },
       "build_entry_point": "docs",
-      "template_folder": "_themes.VS.Modern"
+      "template_folder": "_themes",
+      "is_dynamic_rendering": false
     }
   ],
   "notification_subscribers": [
@@ -91,5 +98,6 @@
         "vscom_hotfix_e2e": "hotfix"
       }
     }
-  ]
+  ],
+  "need_generate_pdf_url_template": false
 }
