Initialize open publishing repository: https://github.com/openpublish/openpublishing-test.tr-tr of branch live

--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -1,8 +1,23 @@
 {
-  "build_entry_point": "docs",
   "need_generate_pdf": false,
   "need_generate_intellisense": false,
   "docsets_to_publish": [
+    {
+      "docset_name": "openpublishing-test-azure",
+      "build_source_folder": "openpublishing/azure-docs-pr",
+      "build_output_subfolder": "openpublishing/test/azure",
+      "locale": "tr-tr",
+      "version": 0,
+      "open_to_public_contributors": false,
+      "type_mapping": {
+        "Conceptual": "Content",
+        "ManagedReference": "Content",
+        "RestApi": "Content"
+      },
+      "build_entry_point": "docs",
+      "template_folder": "_themes",
+      "is_dynamic_rendering": false
+    },
     {
       "docset_name": "openpublishing-test-docs",
       "build_source_folder": "openpublishing/test",
@@ -22,22 +37,6 @@
     {
       "docset_name": "openpublishing-test-op",
       "build_source_folder": "openpublishing/test",
-      "build_output_subfolder": "openpublishing/test-op-technet",
-      "locale": "tr-tr",
-      "version": 0,
-      "open_to_public_contributors": true,
-      "type_mapping": {
-        "Conceptual": "Content",
-        "ManagedReference": "Content",
-        "RestApi": "Content"
-      },
-      "build_entry_point": "docs",
-      "template_folder": "_themes",
-      "is_dynamic_rendering": false
-    },
-    {
-      "docset_name": "openpublishing-test-op-technet",
-      "build_source_folder": "openpublishing/test",
       "build_output_subfolder": "openpublishing/test-op",
       "locale": "tr-tr",
       "version": 0,
@@ -47,12 +46,59 @@
         "ManagedReference": "Content",
         "RestApi": "Content"
       },
+      "build_entry_point": "op",
+      "is_dynamic_rendering": false
+    },
+    {
+      "docset_name": "openpublishing-test-reference",
+      "build_source_folder": "openpublishing/test-reference",
+      "build_output_subfolder": "openpublishing/test-reference",
+      "locale": "tr-tr",
+      "version": 0,
+      "open_to_public_contributors": false,
+      "type_mapping": {
+        "Conceptual": "Content",
+        "ManagedReference": "Content",
+        "RestApi": "Content"
+      },
+      "build_entry_point": "op",
+      "template_folder": "_themes.OPS",
+      "is_dynamic_rendering": false
+    },
+    {
+      "docset_name": "openpublishing-test-starterkit",
+      "build_source_folder": "openpublishing/test",
+      "build_output_subfolder": "openpublishing/test-starterkit",
+      "locale": "tr-tr",
+      "version": 0,
+      "open_to_public_contributors": false,
+      "type_mapping": {
+        "Conceptual": "Content",
+        "ManagedReference": "Content",
+        "RestApi": "Content"
+      },
       "build_entry_point": "docs",
-      "template_folder": "_themes",
+      "template_folder": "_themes.OPS",
       "is_dynamic_rendering": false
     },
     {
       "docset_name": "openpublishing-test-static-vscom",
+      "build_source_folder": "openpublishing/test",
+      "build_output_subfolder": "openpublishing/test-static-vscom",
+      "locale": "tr-tr",
+      "version": 0,
+      "open_to_public_contributors": true,
+      "type_mapping": {
+        "Conceptual": "Content",
+        "ManagedReference": "Content",
+        "RestApi": "Content"
+      },
+      "build_entry_point": "docs",
+      "template_folder": "_themes.VS.Modern",
+      "is_dynamic_rendering": false
+    },
+    {
+      "docset_name": "openpublishing-test-op-technet",
       "build_source_folder": "openpublishing/test",
       "build_output_subfolder": "openpublishing/test",
       "locale": "tr-tr",
@@ -63,8 +109,7 @@
         "ManagedReference": "Content",
         "RestApi": "Content"
       },
-      "build_entry_point": "docs",
-      "template_folder": "_themes",
+      "build_entry_point": "op",
       "is_dynamic_rendering": false
     }
   ],
@@ -73,6 +118,7 @@
   ],
   "branches_to_filter": [],
   "skip_source_output_uploading": false,
+  "need_preview_pull_request": true,
   "dependent_repositories": [
     {
       "path_to_root": "_themes",
@@ -88,6 +134,16 @@
       }
     },
     {
+      "path_to_root": "_themes.OPS",
+      "url": "https://github.com/Microsoft/templates.starterkit",
+      "branch": "master",
+      "branch_mapping": {
+        "develop_e2e": "develop",
+        "release_e2e": "release",
+        "hotfix_e2e": "hotfix"
+      }
+    },
+    {
       "path_to_root": "_themes.VS.Modern",
       "url": "https://github.com/Microsoft/templates.vs.com.tr-tr",
       "branch": "master",
@@ -97,7 +153,52 @@
         "vscom_release_e2e": "release",
         "vscom_hotfix_e2e": "hotfix"
       }
+    },
+    {
+      "path_to_root": "_themes.MSDN.Modern",
+      "url": "https://github.com/Microsoft/templates.msdn.msft",
+      "branch": "master",
+      "branch_mapping": {
+        "msdn_develop_e2e": "develop",
+        "msdn_release_e2e": "release",
+        "msdn_hotfix_e2e": "hotfix"
+      }
+    },
+    {
+      "path_to_root": "_themes.TechNet.Modern",
+      "url": "https://github.com/Microsoft/templates.technet.msft",
+      "branch": "master",
+      "branch_mapping": {
+        "technet_develop_e2e": "develop",
+        "technet_release_e2e": "release",
+        "technet_hotfix_e2e": "hotfix"
+      }
+    },
+    {
+      "path_to_root": "docfx-seed",
+      "url": "https://github.com/docascode/docfx-seed",
+      "branch": "cli",
+      "branch_mapping": {}
+    },
+    {
+      "path_to_root": "_themes.pdf",
+      "url": "https://github.com/Microsoft/templates.docs.msft.pdf",
+      "branch": "master"
+    },
+    {
+      "path_to_root": "_repo.en-us",
+      "url": "https://github.com/Microsoft/openpublishing-test",
+      "branch": "live",
+      "branch_mapping": {
+        "live": "live",
+        "master": "master"
+      }
     }
   ],
-  "need_generate_pdf_url_template": false
+  "need_generate_pdf_url_template": false,
+  "Targets": {
+    "Pdf": {
+      "template_folder": "_themes.pdf"
+    }
+  }
 }
